# GSoC-experimental-codes

./: .gitignore  README.md
hpx_code/as_header/: CMakeLists.txt  Makefile  README.md  hpx_execution.cpp  initialize_hpx.hpp
hpx_code/as_header/Experiment_1/: CMakeLists.txt  README.md
hpx_code/as_header/Experiment_2/: CMakeLists.txt  README.md  initialize_hpx.hpp
hpx_code/dl_wrap/: Makefile  README.md  test.cpp  test_2.cpp  test_3.cpp
normal_code/: README.md
normal_code/as_header/: README.md  execution.cpp  hooking_part.h
normal_code/as_so/: README.md  execution.cpp  fibonacci  hooking_part.cpp  quicksort
normal_code/dl_wrap/: Makefile  README.md  test.cpp
powerpc/: Makefile  README.md  main.cpp  wrap_libc.cpp
